INTELLIJ-232 improve display portal bundle name